# finance

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.sh
alembic/: env.py
app/: main.py
app/core/: config.py  constant.py  dependencies.py  init_db.py  permissions.py  security.py
app/db/: base_class.py  session.py
app/models/: __init__.py  attachment.py  audit_log.py  fees.py  procurement.py  sales_record.py  user.py
app/schemas/: __init__.py  attachment.py  audit_log.py  base.py  fees.py  procurement.py  sales_record.py  stats.py  user.py
app/services/: audit_service.py
app/utils/: __init__.py  audit_decorator.py  excel.py  file_handler.py  logger.py  logger_example.py  validators.py
docs/: add_file.md  alembic.md  api.md  audit_log.md  data.xlsx  db.md  demand.md  docker-usage.md  docker.md  logging.md  multi_process_audit.md  multi_process_audit_page.md  tips.md  tips2.md  tips_for_html.md
migrations/: env.py
migrations/versions/: 02da9ac70ab0_initial_migration.py  0fa1ad4e45b2_update_sales_record_fields_for_usd_.py  155f145d378f_initial_migration.py  249ef6cf58ad_add_exchange_rate_field.py  266739d93b46_add_audit_log_table.py  4b84ae9f6384_remove_category_from_sales_record.py  7f6ac681369e_add_attachment_table.py  8f14dc08b71c_add_factory_price_to_sales_record.py  bd3a15ef8eb8_update_approved_at_to_timestamp_with_.py  (+3 more)
scripts/: jwt_generater.py  operate.py
tests/: conftest.py  test_auth.py  test_permissions.py  test_sales.py
(+27 files in other folders)
